feat(api): modify restify by express, add routes and fix models
now the api is minimun working but all routes are working
